[gd_scene load_steps=7 format=3 uid="uid://c3d_room_base"]

[ext_resource type="Script" path="res://src/dungeon3d/Room3D.gd" id="1_room3d"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wall"]
albedo_color = Color(0.25, 0.25, 0.25, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_floor"]
albedo_color = Color(0.15, 0.15, 0.15, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_door_green"]
albedo_color = Color(0, 0.8, 0, 1)
emission_enabled = true
emission = Color(0, 0.8, 0, 1)
emission_energy_multiplier = 0.5

[sub_resource type="BoxShape3D" id="BoxShape3D_door"]
size = Vector3(0.5, 2.5, 1.5)

[sub_resource type="BoxMesh" id="BoxMesh_door"]
size = Vector3(0.5, 2.5, 1.5)

[node name="Room3D" type="Node3D"]
script = ExtResource("1_room3d")

[node name="Floor" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.15, 0)
use_collision = true
collision_layer = 2
size = Vector3(10, 0.3, 10)
material = SubResource("StandardMaterial3D_floor")

[node name="Ceiling" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.15, 0)
use_collision = true
collision_layer = 2
size = Vector3(10, 0.3, 10)
material = SubResource("StandardMaterial3D_wall")

[node name="BackWall" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, -5.15)
use_collision = true
collision_layer = 2
size = Vector3(10, 4, 0.3)
material = SubResource("StandardMaterial3D_wall")

[node name="FrontWall" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 5.15)
use_collision = true
collision_layer = 2
size = Vector3(10, 4, 0.3)
material = SubResource("StandardMaterial3D_wall")

[node name="LeftWallTop" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.15, 3.25, 0)
use_collision = true
collision_layer = 2
size = Vector3(0.3, 1.5, 10)
material = SubResource("StandardMaterial3D_wall")

[node name="LeftWallBottom" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.15, 1.25, -3.25)
use_collision = true
collision_layer = 2
size = Vector3(0.3, 2.5, 3.5)
material = SubResource("StandardMaterial3D_wall")

[node name="LeftWallBottomFar" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.15, 1.25, 3.25)
use_collision = true
collision_layer = 2
size = Vector3(0.3, 2.5, 3.5)
material = SubResource("StandardMaterial3D_wall")

[node name="RightWallTop" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.15, 3.25, 0)
use_collision = true
collision_layer = 2
size = Vector3(0.3, 1.5, 10)
material = SubResource("StandardMaterial3D_wall")

[node name="RightWallBottom" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.15, 1.25, -3.25)
use_collision = true
collision_layer = 2
size = Vector3(0.3, 2.5, 3.5)
material = SubResource("StandardMaterial3D_wall")

[node name="RightWallBottomFar" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.15, 1.25, 3.25)
use_collision = true
collision_layer = 2
size = Vector3(0.3, 2.5, 3.5)
material = SubResource("StandardMaterial3D_wall")

[node name="RoomLight" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.5, 0)
light_color = Color(1, 0.95, 0.9, 1)
light_energy = 1.5
light_indirect_energy = 0.5
omni_range = 12
omni_attenuation = 1.5

[node name="PuzzleSpawn" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="PlayerSpawn" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 1.0, 0)

[node name="LeftDoor" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 1.25, 0)
collision_layer = 4
collision_mask = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="LeftDoor"]
shape = SubResource("BoxShape3D_door")

[node name="MeshInstance3D" type="MeshInstance3D" parent="LeftDoor"]
mesh = SubResource("BoxMesh_door")
material_override = SubResource("StandardMaterial3D_door_green")

[node name="RightDoor" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 1.25, 0)
collision_layer = 4
collision_mask = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="RightDoor"]
shape = SubResource("BoxShape3D_door")

[node name="MeshInstance3D" type="MeshInstance3D" parent="RightDoor"]
mesh = SubResource("BoxMesh_door")
material_override = SubResource("StandardMaterial3D_door_green")
